--- a/apps/web-astro/src/pages/stores.astro
+++ b/apps/web-astro/src/pages/stores.astro
@@ -8,6 +8,7 @@ import { BASE_LINKS } from "@web-astro/utils/links";
 import { slugify } from "@lib/utils/slugify";
 import MultipleCartsBtn from "@web-astro/components/store-page/cart/MultipleCartsBtn.vue";
 import MultipleCartsView from "@web-astro/components/store-page/cart/MultipleCartsView.vue";
+import type { OrderType } from "@lib/types/orderType";
 
 type params = Parameters<typeof getNearbyStores_Service>;
 const lat = Number(Astro.url.searchParams.get("lat"));
@@ -15,7 +16,7 @@ const lng = Number(Astro.url.searchParams.get("lng"));
 const address = Astro.url.searchParams.get("address") || "address";
 // const country = Astro.url.searchParams.get("country");
 const measure = (Astro.url.searchParams.get("measure") ?? "km") as params[3];
-const type = (Astro.url.searchParams.get("type") ?? "delivery") as params[7];
+const orderType = (Astro.url.searchParams.get("order-type") ?? "delivery") as params[7];
 const sort = (Astro.url.searchParams.get("sort") ?? "distance_asc") as params[8];
 const limit = Number(Astro.url.searchParams.get("limit") ?? 36);
 const currentPage = Number(Astro.url.searchParams.get("page") ?? 1);
@@ -30,7 +31,7 @@ const nearbyStores = await getNearbyStores_Service(
 	limit,
 	currentPage,
 	range,
-	type,
+	orderType,
 	sort
 );
 
@@ -41,13 +42,13 @@ if (nearbyStores.stores.length === 1) {
 
 const createPageUrl = (
 	pageNum: number,
-	type: string | undefined = undefined,
+	orderType: OrderType | undefined = undefined,
 	sort: string | undefined = undefined,
 	range: number | undefined = undefined
 ) => {
 	const url = new URL(Astro.url);
 	url.searchParams.set("page", pageNum.toString());
-	if (type) url.searchParams.set("type", type);
+	if (orderType) url.searchParams.set("order-type", orderType);
 	if (sort) url.searchParams.set("sort", sort);
 	if (range) url.searchParams.set("range", range.toString());
 	return url.toString();
@@ -55,9 +56,9 @@ const createPageUrl = (
 ---
 
 <BaseLayout title={Astro.locals.WEBSITE?.name ?? "List"}>
-	<FilterControls type={type} address={address} sort={sort} createPageUrl={createPageUrl} />
+	<FilterControls orderType={orderType} address={address} sort={sort} createPageUrl={createPageUrl} />
 
-	<StoreList stores={nearbyStores.stores} measure={measure} type={type} />
+	<StoreList stores={nearbyStores.stores} measure={measure} orderType={orderType} />
 
 	<Pagination
 		currentPage={currentPage}
