--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -5,9 +5,11 @@ import Menu from "@web-astro/components/store-page/menu/Menu.astro";
 import SingleCartBtn from "@web-astro/components/store-page/cart/SingleCartBtn.vue";
 import SingleCartView from "@web-astro/components/store-page/cart/SingleCartView.vue";
 import StorePageAddressWidget from "@web-astro/components/store-page/StorePageAddressWidget.vue";
+import { buttonVariants } from "@/components/ui/button";
+import type { OrderType } from "@lib/types/orderType";
 
 const { slug, storeId } = Astro.params;
-
+const orderType: OrderType = Astro.url.searchParams.get("order-type") === "pickup" ? "pickup" : "delivery";
 if (!storeId) {
 	throw new Error("Store ID is required");
 }
@@ -16,6 +18,12 @@ const store = await getStoreData_Service(storeId);
 if (!store) {
 	throw new Error("Store not found");
 }
+
+const createPageUrl = (orderType: OrderType | undefined = undefined) => {
+	const url = new URL(Astro.url);
+	if (orderType) url.searchParams.set("order-type", orderType);
+	return url.toString();
+};
 
 const getMenuRoot = () => {
 	if (!store.menu?.menuRoot) {
@@ -30,13 +38,31 @@ store.name;
 	<h1>{slug}</h1>
 	<h2>{storeId}</h2>
 	<StorePageAddressWidget client:only="vue" />
+	<div
+		class="bg-muted text-muted-foreground my-4 grid w-fit min-w-48 grid-cols-2 items-center justify-center rounded-lg p-1">
+		<a
+			class={buttonVariants({ variant: "ghost" }) +
+				`${orderType === "delivery" ? " bg-background text-foreground shadow hover:bg-background/80" : ""}`}
+			href={createPageUrl("delivery")}>
+			<span class="truncate">Delivery</span>
+		</a>
+
+		<a
+			class={buttonVariants({ variant: "ghost" }) +
+				`${orderType === "pickup" ? " bg-background text-foreground shadow hover:bg-background/80" : ""}`}
+			href={createPageUrl("pickup")}>
+			<span class="truncate">Pickup</span>
+		</a>
+	</div>
 	<script
 		is:inline
 		define:vars={{
-			storeData: store
+			storeData: store,
+			orderType: orderType
 		}}
 	>
 		window.storeData = storeData;
+		window.orderType = orderType;
 	</script>
 	<Menu menuRoot={store.menu?.menuRoot} getMenuRoot={getMenuRoot} />
 	<div slot="header-right">
