Implement user session caching and clear cache on login hash detection

--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -117,5 +117,6 @@ const { title } = Astro.props;
 				</div>
 			</div>
 		</div>
+		<script src="../utils/checkAfterLoginHash.ts"></script>
 	</body>
 </html>
