Refactor user data schema; update user data table structure and enhance address merging logic

--- a/apps/web-astro/src/pages/stores.astro
+++ b/apps/web-astro/src/pages/stores.astro
@@ -65,6 +65,6 @@ const createPageUrl = (
 		totalPages={nearbyStores.pagination.totalPages}
 		createPageUrl={(page: number) => createPageUrl(page)}
 	/>
-	<MultipleCartsBtn client:only="vue" slot="header-right" />
-	<MultipleCartsView client:only="vue" slot="right-drawer" />
+	<!-- <MultipleCartsBtn client:only="vue" slot="header-right" />
+	<MultipleCartsView client:only="vue" slot="right-drawer" /> -->
 </BaseLayout>
