--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -118,5 +118,9 @@ const { title } = Astro.props;
 			</div>
 		</div>
 		<script src="../utils/checkAfterLoginHash.ts"></script>
+		<script>
+			import { userDataStore } from "@web-astro/stores/UserData.store";
+			console.log(userDataStore.value);
+		</script>
 	</body>
 </html>
