Refactor menu-related imports; update paths to use menuRootSchema instead of menuType

--- a/apps/web-astro/src/components/store-page/menu/CategoryCard.astro
+++ b/apps/web-astro/src/components/store-page/menu/CategoryCard.astro
@@ -1,5 +1,5 @@
 ---
-import type { Item, MenuRoot } from "@lib/types/menuType";
+import type { Item, MenuRoot } from "@lib/zod/menuRootSchema";
 import ItemCard from "./ItemCard.astro";
 interface Props {
 	item: Item | undefined;
