--- a/apps/web-astro/src/components/store-page/menu/ItemCard.astro
+++ b/apps/web-astro/src/components/store-page/menu/ItemCard.astro
@@ -1,5 +1,5 @@
 ---
-import type { Item } from "@lib/types/menuType";
+import type { Item } from "@lib/zod/menuRootSchema";
 import { Card, CardDescription, CardHeader, CardTitle } from "@/components/ui/card";
 import { Button } from "@/components/ui/button";
 import { Plus } from "lucide-vue-next";
