--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -69,8 +69,9 @@ const getMenuRoot = () => {
 		<script>
 			import { openRightDrawer } from "@web-astro/utils/openRightDrawer";
 			// if url has ?cartId= then open the right drawer check with new URL object
-			if (new URL(window.location.href).searchParams.get("cartId")) {
+			if (window.location.hash === "#open-cart") {
 				openRightDrawer();
+				history.replaceState(null, "", window.location.pathname + window.location.search);
 			}
 		</script>
 	</div>
