--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "@web-astro/layout/BaseLayout.astro";
-import { getStoreData_Service } from "@db/services/store.service";
+import { getStoreData_CacheJSON } from "@db/cache_json/store.cache_json";
 import Menu from "@web-astro/components/store-page/menu/Menu.astro";
 import SingleCartBtn from "@web-astro/components/cart/SingleCartBtn.vue";
 import SingleCartView from "@web-astro/components/cart/SingleCartView.vue";
@@ -14,7 +14,7 @@ if (!storeId) {
 	throw new Error("Store ID is required");
 }
 
-const store = await getStoreData_Service(storeId);
+const store = await getStoreData_CacheJSON(storeId);
 if (!store) {
 	return new Response(null, { status: 404 });
 }
