--- a/apps/web-astro/src/components/stores-page/StoreCard.astro
+++ b/apps/web-astro/src/components/stores-page/StoreCard.astro
@@ -5,6 +5,7 @@ import { BASE_LINKS } from "@web-astro/utils/links";
 import { slugify } from "@lib/utils/slugify";
 import type { OrderType } from "@lib/types/orderType";
 import IsStoreOpenNow from "./IsStoreOpenNow.vue";
+import DeliveryZoneCheck from "./DeliveryZoneCheck.vue";
 
 interface Props {
 	store: {
@@ -24,6 +25,7 @@ const { store, measure = "km", orderType = "delivery" } = Astro.props;
 	<Card class="bg-muted hover:bg-muted/20 transition-colors" id={`store-card-${store.id}`}>
 		<CardHeader>
 			<IsStoreOpenNow storeId={store.id} orderType={orderType} client:visible />
+			{orderType === "delivery" && <DeliveryZoneCheck storeId={store.id} client:visible />}
 			<CardTitle class="text-lg">
 				<Store class="mr-1 inline-block" />
 				<span class="truncate">{store.name}</span>
