--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -97,9 +97,7 @@ const { title } = Astro.props;
 						<label for="right-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
 						<div
 							class="bg-background text-foreground max-w-10/12 border-muted-foreground min-h-full w-96 overflow-y-auto border-l">
-							<slot name="right-drawer">
-								<!-- <MultipleCartsView client:only="vue" /> -->
-							</slot>
+							<slot name="right-drawer" />
 						</div>
 					</div>
 				</div>
