Add delivery fee tax calculation and display in SingleCartView

--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -71,7 +71,7 @@ const getMenuRoot = () => {
 			// if url has ?cartId= then open the right drawer check with new URL object
 			if (window.location.hash === "#open-cart") {
 				openRightDrawer();
-				history.replaceState(null, "", window.location.pathname + window.location.search);
+				// history.replaceState(null, "", window.location.pathname + window.location.search);
 			}
 		</script>
 	</div>
