Add rate calculation utilities and update tax logic for delivery fees

--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -71,6 +71,7 @@ const getMenuRoot = () => {
 			// if url has ?cartId= then open the right drawer check with new URL object
 			if (window.location.hash === "#open-cart") {
 				openRightDrawer();
+				// TODO: uncomment this
 				// history.replaceState(null, "", window.location.pathname + window.location.search);
 			}
 		</script>
