--- a/apps/web-astro/src/pages/checkout/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/checkout/[storeId]/[...slug].astro
@@ -1,9 +1,7 @@
 ---
 import BaseLayout from "@web-astro/layout/BaseLayout.astro";
 import { getStoreData_CacheJSON } from "@db/cache_json/store.cache_json";
-import Menu from "@web-astro/components/store-page/menu/Menu.astro";
-import SingleCartBtn from "@web-astro/components/cart/SingleCartBtn.vue";
-import SingleCartView from "@web-astro/components/cart/SingleCartView.vue";
+import CartView from "@web-astro/components/checkout/CartView.vue";
 import StorePageAddressWidget from "@web-astro/components/store-page/StorePageAddressWidget.vue";
 import { buttonVariants } from "@/components/ui/button";
 import type { OrderType } from "@lib/types/orderType";
@@ -25,12 +23,9 @@ const createPageUrl = (orderType: OrderType | undefined = undefined) => {
 	return url.toString();
 };
 
-const getMenuRoot = () => {
-	if (!store.menu?.menuRoot) {
-		throw new Error("Menu root not found");
-	}
-	return store.menu.menuRoot;
-};
+if (!store.menu?.menuRoot) {
+	throw new Error("Menu root not found");
+}
 ---
 
 <BaseLayout title={`${store?.name} - ${slug}`}>
@@ -63,19 +58,6 @@ const getMenuRoot = () => {
 			<span class="truncate">Pickup</span>
 		</a>
 	</div>
-	<Menu menuRoot={store.menu?.menuRoot} getMenuRoot={getMenuRoot} />
-	<div slot="header-right">
-		<SingleCartBtn client:only="vue" />
-		<script>
-			import { openRightDrawer } from "@web-astro/utils/openRightDrawer";
-			// if url has ?cartId= then open the right drawer check with new URL object
-			if (window.location.hash === "#open-cart") {
-				openRightDrawer();
-				history.replaceState(null, "", window.location.pathname + window.location.search);
-			}
-		</script>
-	</div>
-	<div slot="right-drawer">
-		<SingleCartView client:only="vue" />
-	</div>
+
+	<CartView client:only="vue" />
 </BaseLayout>
