Remove commented-out console logs in StoreList.astro for cleaner code

--- a/apps/web-astro/src/components/stores-page/StoreList.astro
+++ b/apps/web-astro/src/components/stores-page/StoreList.astro
@@ -133,8 +133,8 @@ const { stores, measure = "km", orderType = "delivery" } = Astro.props;
 					lng: zoneData?.address?.lng
 				}
 			);
-			console.log("bestDeliveryZone");
-			console.log(bestDeliveryZone);
+			// console.log("bestDeliveryZone");
+			// console.log(bestDeliveryZone);
 		} catch (e) {
 			// Ignore error
 		}
