--- a/apps/web-astro/src/components/stores-page/StoreList.astro
+++ b/apps/web-astro/src/components/stores-page/StoreList.astro
@@ -35,7 +35,7 @@ const { stores, measure = "km", orderType = "delivery" } = Astro.props;
 	window.orderType = orderType;
 </script>
 <script>
-	import { ON_USER_DATA_READY } from "@web-astro/stores/UserData.store";
+	import { isUserDataReady, ON_USER_DATA_READY } from "@web-astro/stores/UserData.store";
 	import { isOpenNow } from "@lib/utils/isOpenNow";
 	import { getBestDeliveryZone } from "@lib/utils/getBestDeliveryZone";
 	import { userDataStore } from "@web-astro/stores/UserData.store";
@@ -44,7 +44,7 @@ const { stores, measure = "km", orderType = "delivery" } = Astro.props;
 	const moonIcon = document.querySelector(".moon-icon");
 	const triangleAlertIcon = document.querySelector(".triangle-alert-icon");
 
-	window.addEventListener(ON_USER_DATA_READY, () => {
+	const handleUserDataReady = () => {
 		const storeCards = document.querySelectorAll(".store-card");
 		storeCards.forEach((storeCard) => {
 			const storeId = storeCard.getAttribute("data-store-id");
@@ -58,7 +58,14 @@ const { stores, measure = "km", orderType = "delivery" } = Astro.props;
 				}
 			}
 		});
-	});
+	};
+	if (isUserDataReady) {
+		// User data is ready, so we can check the store status
+		handleUserDataReady();
+	} else {
+		// User data is not ready, so we need to wait for it
+		window.addEventListener(ON_USER_DATA_READY, handleUserDataReady);
+	}
 
 	// Function to check if a store is open and add closed banner if needed
 	async function checkStoreOpen(storeId: string, orderType: OrderType): Promise<void> {
